--- a/css/style.css
+++ b/css/style.css
@@ -51,13 +51,15 @@ body {
 .text-box {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
 }
 
 .heading-primary {
     color: #FFF;
     text-transform: uppercase;
+    /* Fix shakes */
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -65,6 +67,7 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation: movePrimaryMainInLeft 550ms 200ms forwards;
 }
 
 .heading-primary-sub {
@@ -72,4 +75,37 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 16px;
+    animation: movePrimarySubInRight 550ms 200ms forwards;
+}
+
+@keyframes movePrimaryMainInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes movePrimarySubInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
