--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@ $color-primary: #55c57a;
 $color-primary-light: #28b485;
 $color-primary-dark: #7ed56f;
 
+$color-black: #000;
 $color-grey-dark: #777;
 $color-white: #FFF;
 
@@ -43,24 +44,24 @@ body {
     position: relative;
 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-}
 
-.header__logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
+    &__logo-box {
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
 
-.header__logo {
-    height: 3.5rem;
-}
+    &__logo {
+        height: 3.5rem;
+    }
 
-.header__text-box {
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    &__text-box {
+        position: absolute;
+        left: 50%;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 .heading-primary {
@@ -69,22 +70,22 @@ body {
     /* Fix shakes */
     backface-visibility: hidden;
     margin-bottom: 3rem;
-}
 
-.heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: movePrimaryMainInLeft 550ms 200ms forwards;
-}
-
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.45rem;
-    animation: movePrimarySubInRight 550ms 200ms forwards;
+    &--main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation: movePrimaryMainInLeft 550ms 200ms forwards;
+    }
+    
+    &--sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.45rem;
+        animation: movePrimarySubInRight 550ms 200ms forwards;
+    }
 }
 
 @keyframes movePrimaryMainInLeft {
@@ -119,57 +120,59 @@ body {
     }
 }
 
-.btn:link,
-.btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: transform 250ms ease-out;
-    position: relative;
-    font-size: 1.6rem;
-}
+.btn {
+    &:link,
+    &:visited {
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: transform 250ms ease-out;
+        position: relative;
+        font-size: 1.6rem;
+    }
 
-.btn:hover {
-    transform: translateY(-.3rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-}
+    &:hover {
+        transform: translateY(-.3rem);
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
-.btn:active {
-    transform: translateY(-.1rem);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-}
+        &::after {
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
 
-.btn::after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 400ms;
-}
+    &:active {
+        transform: translateY(-.1rem);
+        box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+    }
 
-.btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
+    &::after {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 10rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all 400ms;
+    }
 
-.btn--white {
-    background: $color-white;
-    color: $color-grey-dark;
-}
+    &--white {
+        background: $color-white;
+        color: $color-grey-dark;
 
-.btn--white::after {
-    background: $color-white;
-}
+        &::after {
+            background: $color-white;
+        }
+    }
 
-.btn--animated {
-    animation: moveInFromBottom 550ms 250ms ease-out backwards;
+    &--animated {
+        animation: moveInFromBottom 550ms 250ms ease-out backwards;
+    }
 }
 
 @keyframes moveInFromBottom {
