added legacy grid system

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,3 +5,7 @@ $color-primary-dark: #7ed56f;
 $color-black: #000;
 $color-grey-dark: #777;
 $color-white: #FFF;
+
+$grid-width: 114rem;
+$gutter-vertical: 4rem;
+$gutter-horizontal: 2rem;
