--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,31 @@ body {
     letter-spacing: 1.45rem;
     animation: movePrimarySubInRight 550ms 200ms forwards; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #28b485, #7ed56f);
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 200ms; }
+  .heading-secondary:hover {
+    transform: scale(1.1);
+    letter-spacing: .2rem;
+    text-shadow: 0 2px 50px rgba(119, 119, 119, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
+
+.section-about {
+  background: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -78,7 +103,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 2rem; }
