--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #55c57a;
 $color-primary-light: #28b485;
 $color-primary-dark: #7ed56f;
 
+$color-grey-light-1: #f7f7f7;
+
 $color-black: #000;
 $color-grey-dark: #777;
 $color-white: #FFF;
