--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,3 +30,19 @@ body {
         animation: movePrimarySubInRight 550ms 200ms forwards;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: all 200ms;
+    &:hover {
+        transform: scale(1.1);
+        letter-spacing: .2rem;
+        text-shadow: 0 2px 50px rgba($color-grey-dark, .2);
+    }
+}
