--- a/css/style.css
+++ b/css/style.css
@@ -80,13 +80,29 @@ body {
   .heading-secondary:hover {
     transform: scale(1.1);
     letter-spacing: .2rem;
-    text-shadow: 0 2px 50px rgba(119, 119, 119, 0.2); }
+    text-shadow: 0 0.2rem 5rem rgba(119, 119, 119, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
 
 .u-center-text {
   text-align: center; }
 
-.u-margin-bottom-8 {
+.u-margin-bottom-big {
   margin-bottom: 8rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1rem; }
 
 .section-about {
   background: #f7f7f7;
@@ -180,3 +196,21 @@ body {
 
 .btn--animated {
   animation: moveInFromBottom 550ms 250ms ease-out backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: .3rem; }
+
+.btn-text:hover {
+  background: #55c57a;
+  color: #FFF;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
