--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,6 +43,20 @@ body {
     &:hover {
         transform: scale(1.1);
         letter-spacing: .2rem;
-        text-shadow: 0 2px 50px rgba($color-grey-dark, .2);
+        text-shadow: 0 .2rem 5rem rgba($color-grey-dark, .2);
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
     }
 }
