--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,12 @@ body {
   padding: 25rem 0;
   margin-top: -20vh; }
 
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(40, 180, 133, 0.8), rgba(126, 213, 111, 0.8)), url("../img/nat-4.jpg");
+  background-size: cover;
+  background-position: top; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -241,3 +247,20 @@ body {
       z-index: 11; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+.feature-box {
+  background: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 200ms; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin: .5rem;
+    background-image: linear-gradient(to right, #28b485, #7ed56f);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
