--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,4 +18,5 @@
 
 // components
 @import "components/button";
-@import "components/composition"
+@import "components/composition";
+@import "components/feature-box";
