cards component created

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,16 +3,23 @@ $color-primary: #55c57a;
 $color-primary-light: #28b485;
 $color-primary-dark: #7ed56f;
 
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-teritairy-light: #2998ff;
+$color-teritairy-dark: #5643fa;
+
 // grey-scale colors
 $color-black: #000;
 $color-grey-dark: #777;
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #EEE;
 $color-white: #FFF;
 
 // grid
 $grid-width: 114rem;
 $gutter-vertical: 4rem;
-$gutter-horizontal: 2rem;
+$gutter-horizontal: 6rem;
 
 // font-sizes
 $default-font-size: 1.6rem;
