--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,6 +12,19 @@
         rgba($color-primary-light, 0.8), 
         rgba($color-primary-dark, 0.8)), 
     url('../img/nat-4.jpg');
-background-size: cover;
-background-position: top;
+    background-size: cover;
+    background-position: top;
+
+    transform: skewY(-7deg);
+    margin-top: -9.5rem;
+
+    & > * {
+        transform: skewY(7deg);
+    }
+}
+
+.section-tours {
+    background: $color-grey-light-1;
+    padding: 25rem 0 15rem 0;
+    margin-top: -9.7rem;
 }
