--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,10 @@ body {
   padding: 25rem 0 15rem 0;
   margin-top: -9.7rem; }
 
+.section-stories {
+  padding: 15rem 0;
+  background: #f7f7f7; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -231,7 +235,7 @@ body {
   display: inline-block;
   text-decoration: none;
   border-bottom: 1px solid #55c57a;
-  padding: .3rem; }
+  padding: .5rem; }
 
 .btn-text:hover {
   background: #55c57a;
@@ -381,3 +385,26 @@ body {
     font-size: 6rem;
     font-weight: 100;
     margin-bottom: 8rem; }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%; }
+  .story__text {
+    transform: skewX(12deg); }
