--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -70,7 +70,7 @@
         display: inline-block;
         text-decoration: none;
         border-bottom: 1px solid $color-primary;
-        padding: .3rem
+        padding: .5rem;
     }
 
     &:hover {
