--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -7,6 +7,7 @@
     padding-left: 9rem;
     font-size: $default-font-size;
     transform: skewX(-12deg);
+    background: rgba($color-white, .6);
 
     &__shape {
         width: 15rem;
