--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,4 +22,5 @@
 @import "components/feature-box";
 @import "components/card";
 @import "components/story";
-@import "components/bg-video"
+@import "components/bg-video";
+@import "components/form";
