--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,9 +10,13 @@
         transition: transform 250ms ease-out;
         position: relative;
         font-size: $default-font-size;
+
+        // For the <button element>
+        border: none;
+        cursor: pointer;
     }
 
-    &:hover {
+    &:hover, {
         transform: translateY(-.3rem);
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
@@ -21,7 +26,8 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba($color-black, .2);
     }
