--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-teritairy-dark: #5643fa;
 
 // grey-scale colors
 $color-black: #000;
+$color-grey-dark-3: #333;
 $color-grey-dark-2: #999;
 $color-grey-dark: #777;
 $color-grey-light-1: #f7f7f7;
