--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 // layout
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
 
 // components
 @import "components/button";
