--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,8 @@ body {
   top: 6rem;
   right: 6rem;
   border-radius: 50%;
-  z-index: 1000; }
+  z-index: 1005;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
 
 .navigation__background {
   height: 6rem;
@@ -252,15 +253,17 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#28b485, #7ed56f);
   z-index: 999;
-  transform: scale(50); }
+  transition: all 250ms cubic-bezier(0.86, 0, 0.87, 1); }
 
 .navigation__nav {
   height: 100vh;
-  width: 100%;
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1001; }
+  z-index: 1001;
+  opacity: 0;
+  width: 0;
+  transition: all 250ms cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
   position: absolute;
@@ -268,7 +271,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   list-style: none;
-  text-align: center; }
+  text-align: center;
+  width: 100%; }
 
 .navigation__item {
   margin: 1rem; }
@@ -289,6 +293,13 @@ body {
   background-position: 100%;
   color: #55c57a;
   transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  width: 100%;
+  opacity: 1; }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
