--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,7 +11,8 @@
         top: 6rem;
         right: 6rem;
         border-radius: 50%;
-        z-index: 1000;
+        z-index: 1005;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
     }
 
     &__background {
@@ -26,16 +27,29 @@
             $color-primary-dark
         );
         z-index: 999;
-        transform: scale(50);
+        transition: all 250ms cubic-bezier(
+            0.86,
+            0,
+            0.87,
+            1
+        );
     }
 
     &__nav {
         height: 100vh;
-        width: 100%;
         position: fixed;
         top: 0;
         right: 0;
         z-index: 1001;
+
+        opacity: 0;
+        width: 0;
+        transition: all 250ms cubic-bezier(
+            0.68,
+            -0.55,
+            0.265,
+            1.55
+        );
     }
 
     &__list {
@@ -45,6 +59,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
 
     &__item {
@@ -77,5 +92,14 @@
             color: $color-primary;
             transform: translateX(1rem);
         }
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked ~ &__nav {
+        width: 100%;
+        opacity: 1;
     }
 }
