--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,33 @@ body {
   right: 6rem;
   border-radius: 50%;
   z-index: 1005;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1rem; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background: #333;
+    display: inline-block;
+    transition: all 250ms; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0; }
+  .navigation__icon::before {
+    top: -.75rem; }
+  .navigation__icon::after {
+    top: .75rem; }
 
 .navigation__background {
   height: 6rem;
