--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,46 @@
         border-radius: 50%;
         z-index: 1005;
         box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+        text-align: center;
+        cursor: pointer;
+    }
+
+    &__button:hover &__icon::before {
+        top: -1rem;
+    }
+
+    &__button:hover &__icon::after {
+        top: 1rem;
+    }
+
+    &__icon {
+        position: relative;
+        margin-top: 3.5rem;
+
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: 2px;
+            background: $color-grey-dark-3;
+            display: inline-block;
+            transition: all 250ms;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+        }
+
+        &::before {
+            top: -.75rem;
+        }
+
+        &::after {
+            top: .75rem;
+        }
     }
 
     &__background {
@@ -41,7 +81,6 @@
         top: 0;
         right: 0;
         z-index: 1001;
-
         opacity: 0;
         width: 0;
         transition: all 250ms cubic-bezier(
