added animation for burger

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -141,4 +141,18 @@
         width: 100%;
         opacity: 1;
     }
+
+    &__checkbox:checked + &__button &__icon {
+        background: transparent;
+    }
+    
+    &__checkbox:checked + &__button &__icon::before {
+        top: 0;
+        transform: rotate(135deg);
+    }
+
+    &__checkbox:checked + &__button &__icon::after {
+        top: 0;
+        transform: rotate(-135deg);
+    }
 }
