--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -145,10 +145,7 @@
 
     // Back
     &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absolute-center;
         width: 90%;
     }
 
