--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -74,14 +74,11 @@
         top: -.4rem;
 
         &::after {
+            @include absolute-center;
             height: 1rem;
             width: 1rem;
             content: '';
             border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             background: $color-primary;
             opacity: 0;
             transition: all .2s;
