--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import "layout/navigation";
 
 // components
+@import "components/popup";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
