--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
     /* font-size: 16px; */
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -20,6 +19,11 @@ body {
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: movePrimaryMainInLeft 550ms 200ms forwards;
+
+        @include query-for(mobile) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     
     &--sub {
@@ -28,6 +32,10 @@ body {
         font-weight: 700;
         letter-spacing: 1.45rem;
         animation: movePrimarySubInRight 550ms 200ms forwards;
+        
+        @include query-for(mobile) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -44,6 +52,14 @@ body {
         transform: scale(1.1);
         letter-spacing: .2rem;
         text-shadow: 0 .2rem 5rem rgba($color-grey-dark, .2);
+    }
+
+    @include query-for(tablet) {
+        font-size: 3rem;
+    }
+
+    @include query-for(mobile) {
+        font-size: 2.5rem;
     }
 }
 
