--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include query-for(tablet) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
     }
@@ -17,6 +21,11 @@
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
         display: inline-block;
+
+        @include query-for(tablet) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -53,5 +62,11 @@
         float: right;
         border-top: 1px solid $color-grey-light-2;
         padding-top: 2rem;
+
+        @include query-for(tablet) {
+            width: 100%;
+            text-align: center;
+            float: none;
+        }
     }
 }
