--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
     background: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+
+    @include query-for(mobile) {
+        padding: 25rem 0;
+    }
 }
 
 .section-features {
@@ -21,22 +25,38 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include query-for(tablet) {
+        padding: 15rem 0;
+    }
 }
 
 .section-tours {
     background: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -9.7rem;
+
+    @include query-for(mobile) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     padding: 15rem 0;
     position: relative;
+
+    @include query-for(tablet) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+    @include query-for(tablet) {
+        padding: 10rem 0;
+    }
 }
 
 .book {
